--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "sayurbox",
+  "name": "starter",
   "version": "0.0.1",
   "authors": [
     "Andy wiranata wijaya <andywiranatawijaya@gmail.com>"
