--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,6 @@
     "Andy wiranata wijaya <andywiranatawijaya@gmail.com>"
   ],
   "dependencies": {
-      "bootstrap": "^3.3.6",
-      "flat-ui": "^2.3.0"
+      "bootstrap": "^3.3.6"
   }
 }
